# turing_interactive

./: .gitignore  README.md  cpu_default.json  gpu_default.json  interactive_run.py  job_runner.sh  jupyter_key  jupyter_key.pub  jupyter_ssh.config  multi_node_interactive_run.py  no_nologin.c  sbatch_run.py  server.sh  smanage.py  ssh_template.config  sshd_script.sh  sshd_script_new.sh  template.json  web_manager.py
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: app.js  index.html  style.css
examples/: A100.json  H100.json  H200.json  L40.json  sglang_run.json  test_gpu.json  test_tiny.json
static/: app.js  style.css
templates/: index.html
