[package]
name = "turing-interactive-desktop"
version = "0.1.0"
description = "Native launcher for the turing_interactive cluster session manager"
edition = "2021"
rust-version = "1.75"

[lib]
name = "turing_interactive_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
